--- a/styles/style.css
+++ b/styles/style.css
@@ -63,7 +63,7 @@
     color: white;
 }
 .submit-btn{
-    background-image: url(/images/search.png);
+    background-image: url(../images/search.png);
     background-repeat: no-repeat;
     background-position: center;
     background-color: transparent;
@@ -207,7 +207,7 @@ a{
     align-items: center;
     height: 600px;
     width: 100%;
-    background-image: url(/images/landing-image.png);
+    background-image: url(../images/landing-image.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -252,7 +252,7 @@ a{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url(/images/content_area_pattern_triangle.svg);
+    background-image: url(../images/content_area_pattern_triangle.svg);
     background-size: cover;
     background-position: center;
 }
@@ -443,7 +443,7 @@ a{
     align-items: start;
     height: 700px;
     width: 100%;
-    background-image: url(/images/apply.jpg);
+    background-image: url(../images/apply.jpg);
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(50%, transparent), to(rgba(0, 0, 0, 0.75))), url('/images/apply.jpg');
     background-image: linear-gradient(180deg, transparent 50%, rgba(0, 0, 0, 0.75)), url('/images/apply.jpg');
     background-size: cover;
