--- a/styles/style.css
+++ b/styles/style.css
@@ -2,14 +2,11 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box !important;
-    font-family: "Poppins", sans-serif;
+    font-family: 'Satoshi', sans-serif;
 }
-/* font family for the page (poppins) */
-.poppins-regular {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
+@import url('https://fonts.cdnfonts.com/css/satoshi');
+
+                
   /* styling for the logo container on the navbar on the landing page */
 .logo-ctn{
     height: 100%;
